[package]
name = "libharu-sys"
version = "0.0.1"
authors = ["TKGgunter <thothgunter@live.com>"]
build = "libharu/build.rs"
links = "haru"
description = "Rust bindings for c library libharu a low level pdf generation lib."
repository = ""
keywords = ["pdf", "libharu", "haru"]

[dev-dependencies]
image = "*"


[dependencies]
libc = "*"

[build-dependencies]
gcc = "0.3"
pkg-config = "0.3"
